# vo-autoexpose

./: LICENSE  README.md
spinnaker_sdk_camera_driver/: CMakeLists.txt  package.xml
spinnaker_sdk_camera_driver/cfg/: spinnaker_cam.cfg
spinnaker_sdk_camera_driver/include/spinnaker_sdk_camera_driver/: camera.h  capture.h
spinnaker_sdk_camera_driver/launch/: acquisition_external_trigger.launch
spinnaker_sdk_camera_driver/msg/: SpinnakerImageParams.msg
spinnaker_sdk_camera_driver/params/: external_trigger_params.yaml
spinnaker_sdk_camera_driver/src/: camera.cpp  capture.cpp
vo_autoexpose/: CMakeLists.txt  package.xml
vo_autoexpose/include/vo_autoexpose/: vo_autoexpose.h
vo_autoexpose/launch/: vo_autoexpose.launch  vo_autoexpose_stereo.launch
vo_autoexpose/src/: vo_autoexpose.cpp  vo_autoexpose_node.cpp  vo_autoexpose_stereo_node.cpp
